# antcrate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  composes.md  duties.md  ledger.md  stack.md  state-archive.md  state.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
assets/code/: AGENTS.md  CLAUDE_CODE.md  README.md  install.sh
assets/code/core/: .clang-tidy  CMakeLists.txt  README.md
assets/code/core/include/: canary.hpp
assets/code/core/src/: canary.cpp  main.cpp
assets/code/core/tests/: CMakeLists.txt  test_canary.cpp  test_smoke.cpp
assets/code/launchd/: com.antcrate.backup.plist  com.antcrate.daemon.plist  com.antcrate.intel.plist
assets/code/lib/: address.sh  agent_init.sh  anchor.sh  backup.sh  bootstrap.sh  canary.sh  cleanup.sh  commit.sh  compat.sh  cost.sh  delegate.sh  devops.sh  diagrams.sh  duties.sh  env_scan.sh  events.sh  fetch.sh  gh.sh  git_init.sh  git_triage.sh  health.sh  hook_autoinstall.sh  hooks.sh  hygiene.sh  ingest.sh  intel.sh  lifecycle.sh  lock.sh  log.sh  loop.sh  md_scaffold.sh  migrate.sh  obsidian.sh  paths.sh  policy.sh  post.sh  pp.sh  preflight.sh  profile.sh  propose.sh  (+15 more)
assets/code/systemd/: antcrate-backup.service  antcrate-backup.timer  antcrate-intel.service  antcrate-intel.timer  antcrated.service
assets/code/templates/: config.example
assets/code/tests/: README.md  activity_emitter.bats  address.bats  agent_init.bats  backup.bats  (+80 more)
assets/docs/: BUNDLE_SPEC.md  DIAGRAM_AUTOMATION_GUIDE.md  DIAGRAM_PLAN.md  GH_PIPELINE_PLAN.md  HOOK_PLAN.md  LIB_MAP.md  PATTERNS.md  POST_DEV_BACKLOG.md  architecture.md
docs/: MANUAL.md
docs/diagrams/: tree.mmd
docs/plans/: 2026-06-01-gateway-rule-violations-fix.md  2026-06-06-relocate-command.md  2026-06-10-session-budget-gate-and-duties.md  2026-06-11-least-cost-allocation-and-skill-scoping.md
docs/specs/: 2026-05-31-harness-enforcement-layer.md  2026-06-01-gateway-rule-violations-fix-design.md  2026-06-06-relocate-command-design.md  2026-06-09-loop-engine-harness-design.md  2026-06-10-anthropic-intel-tracker-design.md  2026-06-10-anycrate-capability-layer-design.md  2026-06-10-session-budget-gate-and-duties-design.md  2026-06-11-least-cost-allocation-and-skill-scoping-design.md  2026-06-13-universal-install-and-publication-boundary-design.md
(+46 files in other folders)
